set tf plan command dynamicaly

--- a/.github/workflows/base.yml
+++ b/.github/workflows/base.yml
@@ -67,12 +67,23 @@ jobs:
         working-directory: ${{ inputs.working_directory }}
         run: terraform fmt --recursive -check=true
 
+      # Set terraform plan command
+      - name: Set tf plan command if apply later needed
+        if: ${{ inputs.tf_apply == 'true' }}
+        run: |
+          echo "TF_PLAN_COMMAND='./tf.sh plan -no-color -out plan.tfplan'" >> $GITHUB_ENV
+
+      - name: Set tf plan command - check the config drift
+        if: ${{ inputs.tf_apply == 'false' }}
+        run: |
+          echo "TF_PLAN_COMMAND='./tf.sh plan -detailed-exitcode'" >> $GITHUB_ENV
+
       # Run terraform plan, save plan to file
       - name: terraform plan
         working-directory: ${{ inputs.working_directory }}
         env:
           TF_RECREATE_MISSING_LAMBDA_PACKAGE: false
-        run: ./tf.sh plan -no-color -out plan.tfplan -detailed-exitcode
+        run: ${{ env.TF_PLAN_COMMAND }}
 
       # Apply
       - name: Terraform apply
