--- a/.github/workflows/base.yml
+++ b/.github/workflows/base.yml
@@ -52,6 +52,10 @@ jobs:
         with:
           terraform_version: 1.1.5
 
+      - name: Download tf.sh
+        working-directory: ${{ inputs.working_directory }}
+        run: curl https://releases.fivexl.io/tf/v0.2.0/tf.sh --output tf.sh && chmod +x ./tf.sh
+
       # Initialize
       - name: terraform init
         working-directory: ${{ inputs.working_directory }}
