--- a/.github/workflows/base.yml
+++ b/.github/workflows/base.yml
@@ -51,6 +51,7 @@ jobs:
         uses: hashicorp/setup-terraform@v1
         with:
           terraform_version: 1.1.5
+          terraform_wrapper: false
 
       - name: Download tf.sh
         working-directory: ${{ inputs.working_directory }}
