--- a/.github/workflows/base.yml
+++ b/.github/workflows/base.yml
@@ -92,8 +92,9 @@ jobs:
           TF_RECREATE_MISSING_LAMBDA_PACKAGE: false
         run: |
           #Set up additional env vars
+
           if [[ -n "${{ inputs.tf_additional_env_vars }}" ]]; then
-            eval "$(echo ${{ inputs.tf_additional_env_vars }} | jq -r 'keys[] as $k | "export \($k)=\(.[$k])"')"
+            eval "$(echo "${{ inputs.tf_additional_env_vars }}" | jq -r 'keys[] as $k | "export \($k)=\(.[$k])"')"
           fi
           #Apply changes only if tf_apply=true, else just check the configuration drift 
           if ${{ inputs.tf_apply }}; then
