--- a/.github/workflows/base.yml
+++ b/.github/workflows/base.yml
@@ -48,6 +48,9 @@ on:
       tf_upload_artifact_path:
         default: ''
         type: string
+      tf_state_file_path:
+        default: ''
+        type: string      
       tf_sh_version:
         default: '0.2.0'
         type: string
@@ -164,7 +167,7 @@ jobs:
         working-directory: ${{ inputs.working_directory }}
         run: |
           aws_environment_id=$(echo -n "${{ steps.configure-aws-creds.outputs.aws-account-id }}-${{ inputs.aws_region }}" | sha1sum | awk '{print $1}')
-          aws s3 cp s3://terraform-state-${aws_environment_id}/terraform/terraform-server/main.tfstate ./main.tfstate
+          aws s3 cp s3://terraform-state-${aws_environment_id}/${{ inputs.tf_state_file_path }} ./main.tfstate
 
       - name: upload state file to artifacts
         if: ${{ inputs.tf_upload_artifact_state_file == 'true' }}
