--- a/.github/workflows/base.yml
+++ b/.github/workflows/base.yml
@@ -171,6 +171,7 @@ jobs:
 
       - name: upload state file to artifacts
         if: ${{ inputs.tf_upload_artifact_state_file == 'true' }}
+        working-directory: ${{ inputs.working_directory }}
         uses: actions/upload-artifact@v4.0.0
         with:
           name: tf_artifacts_state_file${{ inputs.tf_upload_artifact_name_suffix }}
@@ -178,6 +179,7 @@ jobs:
 
       - name: upload artifacts
         if: ${{ inputs.tf_upload_artifacts == 'true' }}
+        working-directory: ${{ inputs.working_directory }}
         env:
           ARTIFACT_PATH: ${{ inputs.tf_upload_artifact_path || inputs.working_directory }}
         uses: actions/upload-artifact@v4.0.0
