--- a/.github/workflows/base.yml
+++ b/.github/workflows/base.yml
@@ -165,8 +165,6 @@ jobs:
         run: |
           aws_environment_id=$(echo -n "${{ steps.configure-aws-creds.outputs.aws-account-id }}-${{ inputs.aws_region }}" | sha1sum | awk '{print $1}')
           aws s3 cp s3://terraform-state-${aws_environment_id}/${{ inputs.tf_state_file_path_on_s3 }} ./main.tfstate
-          ls -la
-          pwd
 
       - name: upload state file to artifacts
         if: ${{ inputs.tf_upload_artifact_state_file == 'true' }}
@@ -179,5 +177,5 @@ jobs:
         if: ${{ inputs.tf_upload_artifact_plan == 'true' }}
         uses: actions/upload-artifact@v4.0.0
         with:
-          name: tf_artifacts${{ inputs.tf_upload_artifact_name_suffix }}
+          name: tf_artifacts_plan${{ inputs.tf_upload_artifact_name_suffix }}
           path: ${{ inputs.working_directory }}/tfplan
