--- a/.github/workflows/base.yml
+++ b/.github/workflows/base.yml
@@ -45,7 +45,10 @@ on:
       tf_upload_artifact_state_file:
         default: 'false'
         type: string
-      tf_state_file_path_on_s3:
+      tf_state_file_dir_on_s3:
+        default: ''
+        type: string      
+      tf_state_file_name:
         default: ''
         type: string      
       tf_sh_version:
@@ -164,14 +167,14 @@ jobs:
         working-directory: ${{ inputs.working_directory }}
         run: |
           aws_environment_id=$(echo -n "${{ steps.configure-aws-creds.outputs.aws-account-id }}-${{ inputs.aws_region }}" | sha1sum | awk '{print $1}')
-          aws s3 cp s3://terraform-state-${aws_environment_id}/${{ inputs.tf_state_file_path_on_s3 }} ./main.tfstate
+          aws s3 cp s3://terraform-state-${aws_environment_id}/${{ inputs.tf_state_file_dir_on_s3 }}/${{ inputs.tf_state_file_name }} ./${{ inputs.tf_state_file_name }}
 
       - name: upload state file to artifacts
         if: ${{ inputs.tf_upload_artifact_state_file == 'true' }}
         uses: actions/upload-artifact@v4.0.0
         with:
           name: tf_artifacts_state_file${{ inputs.tf_upload_artifact_name_suffix }}
-          path: ${{ inputs.working_directory }}/main.tfstate
+          path: ${{ inputs.working_directory }}/${{ inputs.tf_state_file_name }}
 
       - name: upload plan to artifacts
         if: ${{ inputs.tf_upload_artifact_plan == 'true' }}
