update default value for the input checkout_commit_sha

--- a/.github/workflows/base.yml
+++ b/.github/workflows/base.yml
@@ -12,7 +12,7 @@ on:
         description: "The branch, tag or SHA to checkout"
         required: false
         type: string
-        default: ${{ github.sha }}
+        default: ''
       checkout_fetch_depth:
         description: "Number of commits to fetch"
         required: false
