--- a/.github/workflows/base.yml
+++ b/.github/workflows/base.yml
@@ -156,16 +156,29 @@ jobs:
             # prepare also human-readable plan
             terraform show -no-color plan.tfplan > tfplan
           else
-            # Run plan and capture output
+            # Run plan and capture output while still showing it in logs
             PLAN_OUTPUT=$(./tf.sh plan -detailed-exitcode 2>&1)
             PLAN_EXIT_CODE=$?
+            
+            # Always show the plan output in GitHub Actions logs
+            echo "$PLAN_OUTPUT"
             
             # If plan shows changes and Slack webhook is provided, send notification
             if [ $PLAN_EXIT_CODE -eq 2 ] && [ -n "${{ inputs.slack_webhook_url }}" ]; then
               PLAN_SUMMARY=$(echo "$PLAN_OUTPUT" | grep -A 1 "Plan:" | tail -n 1)
-              curl -X POST -H 'Content-type: application/json' \
+              echo "Sending Slack notification for non-empty plan..."
+              SLACK_RESPONSE=$(curl -s -w "\n%{http_code}" -X POST -H 'Content-type: application/json' \
                 --data "{\"text\":\"🚨 Terraform plan shows changes in ${{ github.repository }} (${{ github.ref_name }}):\n\`\`\`$PLAN_SUMMARY\`\`\`\"}" \
-                "${{ inputs.slack_webhook_url }}"
+                "${{ inputs.slack_webhook_url }}")
+              SLACK_STATUS=$(echo "$SLACK_RESPONSE" | tail -n1)
+              SLACK_BODY=$(echo "$SLACK_RESPONSE" | sed '$d')
+              
+              if [ "$SLACK_STATUS" = "200" ]; then
+                echo "✅ Slack notification sent successfully"
+              else
+                echo "❌ Failed to send Slack notification. Status: $SLACK_STATUS"
+                echo "Response: $SLACK_BODY"
+              fi
             fi
             
             # Exit with the original plan exit code
