--- a/.github/workflows/base.yml
+++ b/.github/workflows/base.yml
@@ -156,12 +156,9 @@ jobs:
             # prepare also human-readable plan
             terraform show -no-color plan.tfplan > tfplan
           else
-            # Run plan and capture output while still showing it in logs
-            PLAN_OUTPUT=$(./tf.sh plan -detailed-exitcode 2>&1)
+            # Run plan and capture output while showing it in real-time
+            PLAN_OUTPUT=$(./tf.sh plan -detailed-exitcode 2>&1 | tee /dev/tty)
             PLAN_EXIT_CODE=$?
-            
-            # Always show the plan output in GitHub Actions logs
-            echo "$PLAN_OUTPUT"
             
             # If plan shows changes and Slack webhook is provided, send notification
             if [ $PLAN_EXIT_CODE -eq 2 ] && [ -n "${{ inputs.slack_webhook_url }}" ]; then
