--- a/.github/workflows/base.yml
+++ b/.github/workflows/base.yml
@@ -160,16 +160,16 @@ jobs:
             # Run plan and capture both output and exit code
             PLAN_OUTPUT=$(./tf.sh plan -detailed-exitcode 2>&1)
             PLAN_EXIT_CODE=$?
+            set -e
             
             # Show the plan output
             echo "$PLAN_OUTPUT"
             
             # If plan shows changes and Slack webhook is provided, send notification
             if [ $PLAN_EXIT_CODE -eq 2 ] && [ -n "${{ inputs.slack_webhook_url }}" ]; then
-              PLAN_SUMMARY=$(echo "$PLAN_OUTPUT" | grep -A 1 "Plan:" | tail -n 1)
               echo "Sending Slack notification for non-empty plan..."
               SLACK_RESPONSE=$(curl -s -w "\n%{http_code}" -X POST -H 'Content-type: application/json' \
-                --data "{\"text\":\"🚨 Terraform plan shows changes in ${{ github.repository }} (${{ github.ref_name }}):\n\`\`\`$PLAN_SUMMARY\`\`\`\"}" \
+                --data "{\"text\":\"🚨 Terraform plan shows changes in ${{ github.repository }} (${{ github.ref_name }}):\nSee the changes here: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}\"}" \
                 "${{ inputs.slack_webhook_url }}")
               SLACK_STATUS=$(echo "$SLACK_RESPONSE" | tail -n1)
               SLACK_BODY=$(echo "$SLACK_RESPONSE" | sed '$d')
@@ -182,7 +182,7 @@ jobs:
               fi
             fi
             
-            set -e
+            
             # Exit with the original plan exit code
             exit $PLAN_EXIT_CODE
           fi
