--- a/.github/workflows/base.yml
+++ b/.github/workflows/base.yml
@@ -174,7 +174,7 @@ jobs:
             if [ $PLAN_EXIT_CODE -eq 2 ] && [ -n "${{ inputs.slack_webhook_url }}" ]; then
               echo "Sending Slack notification for non-empty plan..."
               SLACK_RESPONSE=$(curl -s -w "\n%{http_code}" -X POST -H 'Content-type: application/json' \
-                --data "{\"text\":\"🚨 *Environment: ${{ inputs.environment }}*\nTerraform plan shows changes in ${{ github.repository }} (${{ github.ref_name }}):\nSee the changes here: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs/${{ github.job }}\"}" \
+                --data "{\"text\":\"🚨 *Environment: ${{ inputs.environment }}*\nTerraform plan shows changes in ${{ github.repository }} (${{ github.ref_name }}):\nSee the changes here: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/job/${{ github.job_id }}\"}" \
                 "${{ inputs.slack_webhook_url }}")
               SLACK_STATUS=$(echo "$SLACK_RESPONSE" | tail -n1)
               SLACK_BODY=$(echo "$SLACK_RESPONSE" | sed '$d')
