--- a/.github/workflows/base.yml
+++ b/.github/workflows/base.yml
@@ -69,16 +69,14 @@ on:
       tf_sh_version:
         default: "0.2.0"
         type: string
-      slack_webhook_url:
-        description: "Slack webhook URL for notifications"
-        required: false
-        type: string
-        default: ""
       environment:
         description: "Environment name for the deployment"
         required: false
         type: string
         default: ""
+    secrets:
+      slack_webhook_url:
+        required: false
     outputs:
       tf_output:
         description: "The output of the tf output -json command"
@@ -90,6 +88,7 @@ jobs:
     env:
       AWS_DEFAULT_REGION: ${{ inputs.aws_default_region }}
       AWS_ROLE_ARN: ${{ inputs.aws_role_arn }}
+      SLACK_WEBHOOK_URL: ${{ secrets.slack_webhook_url }}
     permissions:
       id-token: write
       contents: write
@@ -171,11 +170,18 @@ jobs:
             echo "$PLAN_OUTPUT"
 
             # If plan shows changes and Slack webhook is provided, send notification
-            if [ $PLAN_EXIT_CODE -eq 2 ] && [ -n "${{ inputs.slack_webhook_url }}" ]; then
+            if [ $PLAN_EXIT_CODE -eq 2 ] && [ -n "$SLACK_WEBHOOK_URL" ]; then
               echo "Sending Slack notification for non-empty plan..."
+              # Prepare message with conditional environment line
+              MESSAGE="🚨"
+              if [ -n "${{ inputs.environment }}" ]; then
+                MESSAGE="$MESSAGE *Environment: ${{ inputs.environment }}*\n"
+              fi
+              MESSAGE="$MESSAGE Terraform plan shows changes in ${{ github.repository }} (${{ github.ref_name }}):\nSee the changes here: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+              
               SLACK_RESPONSE=$(curl -s -w "\n%{http_code}" -X POST -H 'Content-type: application/json' \
-                --data "{\"text\":\"🚨 *Environment: ${{ inputs.environment }}*\nTerraform plan shows changes in ${{ github.repository }} (${{ github.ref_name }}):\nSee the changes here: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}\"}" \
-                "${{ inputs.slack_webhook_url }}")
+                --data "{\"text\":\"$MESSAGE\"}" \
+                "$SLACK_WEBHOOK_URL")
               SLACK_STATUS=$(echo "$SLACK_RESPONSE" | tail -n1)
               SLACK_BODY=$(echo "$SLACK_RESPONSE" | sed '$d')
               
